# rdf-reasoner-konclude

./: .dockerignore  .gitignore  .gitmodules  .npmignore  2026-05-04-007-rdf-reasoner-konclude-requirements.md  CLAUDE.md  CMakeLists.txt  Dockerfile  Makefile  NOTICE  README.md  docker-compose.yml  emscripten.cmake  package-lock.json  package.json  playwright.config.ts  run_syntax_check.sh  run_syntax_check_all.sh  tsconfig.json  vite.browser-test.config.ts  vitest.config.ts
.claude/: settings.json
build-mt/: CMakeCache.txt
docs/: handoff-2026-05-11-stpu-teardown-fix.md
docs/brainstorms/: 2026-05-12-007-feat-package-publish-requirements.md
docs/plans/: 2026-05-12-008-feat-package-publish-plan.md  2026-05-13-001-feat-docker-cli-and-repo-dx-plan.md  2026-05-13-003-perf-binary-protocol-followup-plan.md  2026-05-15-015-fix-port-operation-correctness-loop-plan.md  2026-05-18-016-fix-native-output-parity-golden-reference-plan.md  2026-05-18-017-fix-wasm-port-abox-tbox-parity-plan.md  2026-05-18-018-chore-remove-dead-code-debug-logging-plan.md  2026-05-18-019-perf-wasm-hash-map-allocation-optimization-plan.md  2026-05-18-020-fix-browser-pthread-hang-plan.md  2026-05-19-021-fix-browser-tests-owl-class-declarations-plan.md  2026-05-19-022-feat-normalize-owl-declarations-plan.md
docs/solutions/architecture-patterns/: emscripten-pthread-exit-browser-fix-2026-05-13.md  wasm-pthread-concurrency-architecture-2026-05-08.md
docs/solutions/logic-errors/: getInferredNTriples-subclassof-over-materialization-2026-05-12.md  saturation-subsumer-extraction-flag-scoping-logic-error-2026-05-12.md
docs/solutions/performance-issues/: wasm-build-pipeline-optimization-2026-05-12.md
patches/: 001-all-wasm-changes.patch  001-qt-compat-header.patch  002-cthread-sync.patch  003-raptor-istream.patch  004-bool-ref-hash.patch  007-cthread-ideal-thread-count.patch  010-wasm-log-override.patch  011-once-fire-callback.patch  012-realizer-callback-atomic.patch  013-realizer-callsite-take.patch  014-realizer-item-callsite-take.patch  015-realizer-testing-step-callsite-take.patch
scripts/: apply-patches.sh  build-raptor-wasm.sh  convert-test-fixtures.sh  generate-patches.sh  native-xml-to-nt.mjs  patch-konclude-mjs.sh
src/: CMakeLists.txt  KoncludeReasoner.cpp  KoncludeReasoner.h  bindings.cpp
src/compat/: QTextStream  QtCompat.h  QtGlobal  Redland.h  qglobal.h  qmath.h  robin_hood.h
src/compat/overrides/: CIntervalThread.cpp  CKoncludeInfo.cpp  COntologyMultiAutoParsingLoader.cpp  COntologyRealizingDynamicRequirmentCallbackData.cpp  CRDFRedlandRaptorParser.cpp  CRDFRedlandRaptorSimpleConcurrentParser.cpp  CSingleThreadTaskProcessorUnit.cpp  CThread.cpp
tests/: setup.ts
tests/bench/: bench.mjs  binary-runner.mjs  debug-galen.mjs  dump-outputs.mjs  native-runner.mjs  timing.mjs  ts-runner.mjs  wasm-binary.mjs  wasm-runner.mjs
tests/browser/: index.html  ontology.spec.ts  serve.mjs  test-entry.ts  worker.spec.ts
tests/fixtures/: galen-native-out.xml  galen-native-tbox.nt  galen-wasm-out.nt  galen.nt  inconsistent.nt  lubm-native-out.xml  lubm-native-tbox.nt  lubm-wasm-out.nt  lubm.nt  pizza.nt  roberts-family.nt  roberts-native-abox-raw.xml  roberts-native-abox.nt  roberts-native-out.xml  roberts-native-tbox.nt  roberts-wasm-out.nt
tests/helpers/: compare-native.ts  fixture.ts
tests/integration/: abox-realization.test.ts  classify-properties.test.ts  consistency.test.ts  galen.test.ts  lubm.test.ts  multi-call-stability.test.ts  owl-dl-capabilities.test.ts  pizza.test.ts  roberts-family.test.ts  roberts-minimal-realization.test.ts
tests/smoke/: raptor-smoke.c  smoke.mjs
tests/unit/: RdfReasoner.classifyProperties.test.ts  RdfReasoner.materialize.test.ts  RdfReasoner.store.test.ts  RdfReasoner.test.ts  cli.test.ts  intern.test.ts  node-compat.test.ts  worker.test.ts
ts/: cli.ts  index.node.mjs  index.ts  intern.ts  konclude.d.mts  konclude.mjs  types.ts  worker-node.mjs  worker.ts
